# AKF

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  demo.tape  session-transcript.docx
.github/: copilot-instructions.md
.github/workflows/: publish.yml
docs/: AKF-2031-Vision.docx  AKF-Counter-Positioning-Strategy.docx  PROMOTION-CONTENT.md  getting-started-guide.md  launch-materials.md  launch-playbook.md  quickstart.md
docs/launch-drafts/: devto-tutorial.md  hacker-news-show-hn.md  reddit-post.md  twitter-launch-thread.md
editors/vscode/: package.json
examples/akf-starter/: detect-demo.js  index.js  package-lock.json  package.json  trust-demo.js
examples/integrations/: README.md  exiftool_provenance.sh  pandoc_provenance.sh  pillow_provenance.py  pypdf_provenance.py  python_docx_provenance.py
extensions/github-action/: README.md  action.yml  action.yml.akf.json  index.js  index.js.akf.json
extensions/google-workspace/: .clasp.json.example  AKF.gs  Cards.gs  Code.gs  README.md  Sidebar.html  appsscript.json
extensions/office-addin/: README.md  manifest.xml  package-lock.json  package.json  tsconfig.json  webpack.config.js
extensions/vscode/: README.md  package-lock.json  package.json  tsconfig.json
huggingface/: README.md  app.py  logic.py  requirements.txt  test_app.py
python/: pyproject.toml
python/akf/: __init__.py  __init__.py.akf.json  __main__.py  builder.py  certify.py  certify.py.akf.json  cli.py  cli.py.akf.json  compliance.py  core.py  git_ops.py  models.py  presets.py  provenance.py  security.py  shell_hook.py  signing.py  stamp.py  tracking.py  trust.py  universal.py  watch.py
python/akf/formats/: _ooxml.py  base.py  go_format.py  html.py  image.py  json_format.py  toml_format.py
python/tests/: test_ai_detect.py  test_certify.py  test_certify.py.akf.json  test_context.py  test_cross_flow.py  test_daemon.py  test_e2e_certify.py  test_e2e_integration.py  test_e2e_multi_agent.py  test_evidence.py  test_git_ops.py  test_integration_full.py  test_log.py  test_ooxml_custom_properties.py  test_performance.py  test_report.py  test_stamp.py
python/tests/test_formats/: test_docx.py  test_go_format.py  test_pptx.py  test_toml_format.py  test_xlsx.py
site/: index.html  package-lock.json  package.json  vercel.json
site/api/: moltbook-stats.ts
site/public/: llms-full.txt  llms.txt  robots.txt
site/src/: App.tsx  App.tsx.akf.json  index.css  main.tsx
skills/: convert.md  embed.md  git.md  scan.md  stamp.md  stream.md
spec/: akf-v1.0-spec.md  akf-v1.0.schema.json  akf-v1.1.schema.json
test-data/email/: audit-summary.eml  compliance-alert.eml  data-request.eml
test-data/html/: api-docs.html  dashboard.html  report-template.html
test-data/images/: chart-compliance.png.akf.akf.json  chart-revenue.png.akf.akf.json  chart-trust.png.akf.akf.json  logo.png.akf.akf.json  screenshot-audit.jpg.akf.akf.json  (+3 more)
typescript/: CHANGELOG.md  README.md  package-lock.json  package.json
(+84 files in other folders)
