[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akf"
version = "1.2.0"
description = "AKF — Agent Knowledge Format. Lightweight file format for AI-generated knowledge with built-in trust, provenance, and security."
requires-python = ">=3.9"
authors = [
    { name = "AKF Contributors" }
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://akf.dev"
Repository = "https://github.com/HMAKT99/AKF"
Documentation = "https://akf.dev"

[project.optional-dependencies]
docx = ["python-docx>=0.8"]
xlsx = ["openpyxl>=3.1"]
pptx = ["python-pptx>=0.6"]
pdf = ["pypdf>=3.0"]
image = ["Pillow>=10.0"]
office = ["python-docx>=0.8", "openpyxl>=3.1", "python-pptx>=0.6"]
report = ["fpdf2>=2.7"]
crypto = ["cryptography>=42.0"]
all = ["python-docx>=0.8", "openpyxl>=3.1", "python-pptx>=0.6", "pypdf>=3.0", "Pillow>=10.0", "cryptography>=42.0", "fpdf2>=2.7"]
dev = ["pytest", "black", "ruff", "pyyaml"]

[project.scripts]
akf = "akf.cli:main"

[tool.setuptools.packages.find]
include = ["akf*"]
